# factorio-blueprint

./: Cargo.toml  README.md
src/: deflate.py  lib.rs  main.rs  objects.rs  objwalk.rs  version_prefix.rs  whitespace_remover.rs
src/whitespace_remover/: test.rs
tests/: parse_examples.rs  roundtrip.rs  test_decode_parity.sh
tests/examples/: all_the_belts.txt  all_the_combinators.txt  all_the_inserters.txt  belt_control_behavior_and_content_read_modes.txt  big_ass_mall.txt  circuit_entities_configured.txt  circuit_entities_simple.txt  easy_tile_solar_array.txt  empty_blueprint_book.txt  empty_blueprint_in_book.txt  empty_deconstruction.txt  empty_upgrade.txt  halfway_setup_upgrade.txt  inserter_circuit_network.txt  inserter_circuit_network_none_operation.txt  inserter_logistic_network.txt  label_has_icon_and_emoji.txt  labels_icons_descriptions_blueprint.txt  labels_icons_descriptions_deconstruction.txt  labels_icons_descriptions_upgrade.txt  minimal_nested.txt  modular_mall_krastorio.txt  neighbours_defined.txt  nilaus_base_in_a_book.txt  nuclear_reactor_1.1gw.txt  power_book.txt  power_switch_copper_red_and_green_connected.txt  pump_logistic_and_circuit_conditions.txt  requester_chest_modes_of_operation.txt  roboport_all_modes.txt  roboport_no_total_logistic_output_signal.txt  science_book_modular.txt  setup_deconstruction.txt  snap_to_grid_absolute.txt  snap_to_grid_relative.txt  super_compact_tileable_mining.txt  tiered_universal_smelters.txt  tileable_science_0.17_early_mid.txt  train_schedule_all_wait_conditions.txt  train_schedule_no_wait_conditions.txt  (+2 more)
