[package]
name = "factorio-blueprint"
version = "0.1.0"
authors = ["Peter Goodspeed-Niklaus <peter.r.goodspeedniklaus@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0", optional = true }
base64 = "0.12"
flate2 = "1.0"
noisy_float = { version = "0.1", features = [ "serde-1" ] }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
structopt = { version = "0.3", optional = true }
thiserror = "1.0"

[features]
default = []

codec-cli = [
    "anyhow",
    "structopt",
]
