[package]
name = "factorio-blueprint"
version = "0.3.0"
authors = ["Peter Goodspeed-Niklaus <peter.r.goodspeedniklaus@gmail.com>"]
edition = "2018"

description = "Library for reading and writing Factorio blueprints."
repository = "https://github.com/coriolinus/factorio-blueprint"
license = "GPL-3.0"

[dependencies]
anyhow = { version = "1.0", optional = true }
base64 = "0.12"
flate2 = "1.0"
noisy_float = { version = "0.1", features = [ "serde-1" ] }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = { version = "1.0", features = [ "float_roundtrip" ] }
serde_repr = "0.1"
structopt = { version = "0.3", optional = true }
thiserror = "1.0"

[features]
default = []

codec-cli = [
    "anyhow",
    "structopt",
]

[dev-dependencies]
assert-json-diff = "2.0"
